--- a/index.html
+++ b/index.html
@@ -273,7 +273,8 @@
                         Merci pour votre message ! Je vous répondrai très bientôt.
                     </div>
 
-                    <form id="contactForm" action="https://submit-form.com/Vje1NX3nr">
+                    <form id="contactForm" action="https://submit-form.com/Vje1NX3nr" method="POST">
+                        <input type="hidden" name="_redirect" value="https://kevinurbain.github.io/thanks.html">
                         <div class="form-group">
                             <label for="name">Nom complet *</label>
                             <input type="text" id="name" name="name" required>
@@ -371,42 +372,42 @@
         });
 
         // Contact form handling
-        document.getElementById('contactForm').addEventListener('submit', function (e) {
-            e.preventDefault();
+        // document.getElementById('contactForm').addEventListener('submit', function (e) {
+        //     e.preventDefault();
 
-            const formData = {
-                name: document.getElementById('name').value,
-                email: document.getElementById('email').value,
-                subject: document.getElementById('subject').value,
-                message: document.getElementById('message').value
-            };
+        //     const formData = {
+        //         name: document.getElementById('name').value,
+        //         email: document.getElementById('email').value,
+        //         subject: document.getElementById('subject').value,
+        //         message: document.getElementById('message').value
+        //     };
 
-            fetch('https://submit-form.com/Vje1NX3nr', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(formData)
-            })
-                .then(response => {
-                    if (response.ok) {
-                        // Show success message
-                        document.getElementById('successMessage').classList.add('show');
-                        // Reset form
-                        this.reset();
-                        // Hide success message after 5 seconds
-                        setTimeout(() => {
-                            document.getElementById('successMessage').classList.remove('show');
-                        }, 5000);
-                    } else {
-                        alert("Une erreur est survenue, veuillez réessayer.");
-                    }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    alert("Impossible d'envoyer le formulaire.");
-                });
-        });
+        //     fetch('https://submit-form.com/Vje1NX3nr', {
+        //         method: 'POST',
+        //         headers: {
+        //             'Content-Type': 'application/json'
+        //         },
+        //         body: JSON.stringify(formData)
+        //     })
+        //         .then(response => {
+        //             if (response.ok) {
+        //                 // Show success message
+        //                 document.getElementById('successMessage').classList.add('show');
+        //                 // Reset form
+        //                 this.reset();
+        //                 // Hide success message after 5 seconds
+        //                 setTimeout(() => {
+        //                     document.getElementById('successMessage').classList.remove('show');
+        //                 }, 5000);
+        //             } else {
+        //                 alert("Une erreur est survenue, veuillez réessayer.");
+        //             }
+        //         })
+        //         .catch(error => {
+        //             console.error('Error:', error);
+        //             alert("Impossible d'envoyer le formulaire.");
+        //         });
+        // });
 
 
         // Smooth scroll behavior
