--- a/thanks.html
+++ b/thanks.html
@@ -1,2 +1,16 @@
-<h2>Merci !</h2>
-<p>Votre message a bien été envoyé.</p>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Merci pour votre envoi...</title>
+</head>
+
+<body>
+    <h2>Merci !</h2>
+    <p>Votre message a bien été envoyé.</p>
+
+</body>
+
+</html>
