--- a/index.html
+++ b/index.html
@@ -273,8 +273,10 @@
                         Merci pour votre message ! Je vous répondrai très bientôt.
                     </div>
 
-                    <form id="contactForm" action="https://submit-form.com/Vje1NX3nr" method="POST">
-                        <input type="hidden" name="_redirect" value="https://kevinurbain.github.io/thanks.html">
+                    <form id="contactForm" action="https://submit-form.com/Vje1NX3nr" method="POST"
+                        target="hidden_iframe" onsubmit="showSuccessMessage()">
+                        <input type="hidden" name="_redirect"
+                            value="https://kevinurbain.github.io/Portfolio/thanks.html">
                         <div class="form-group">
                             <label for="name">Nom complet *</label>
                             <input type="text" id="name" name="name" required>
@@ -372,42 +374,18 @@
         });
 
         // Contact form handling
-        // document.getElementById('contactForm').addEventListener('submit', function (e) {
-        //     e.preventDefault();
+        function showSuccessMessage() {
+            const message = document.getElementById('successMessage');
+            message.style.display = 'block';
 
-        //     const formData = {
-        //         name: document.getElementById('name').value,
-        //         email: document.getElementById('email').value,
-        //         subject: document.getElementById('subject').value,
-        //         message: document.getElementById('message').value
-        //     };
+            // Cache le message après 5 secondes
+            setTimeout(() => {
+                message.style.display = 'none';
+            }, 5000);
 
-        //     fetch('https://submit-form.com/Vje1NX3nr', {
-        //         method: 'POST',
-        //         headers: {
-        //             'Content-Type': 'application/json'
-        //         },
-        //         body: JSON.stringify(formData)
-        //     })
-        //         .then(response => {
-        //             if (response.ok) {
-        //                 // Show success message
-        //                 document.getElementById('successMessage').classList.add('show');
-        //                 // Reset form
-        //                 this.reset();
-        //                 // Hide success message after 5 seconds
-        //                 setTimeout(() => {
-        //                     document.getElementById('successMessage').classList.remove('show');
-        //                 }, 5000);
-        //             } else {
-        //                 alert("Une erreur est survenue, veuillez réessayer.");
-        //             }
-        //         })
-        //         .catch(error => {
-        //             console.error('Error:', error);
-        //             alert("Impossible d'envoyer le formulaire.");
-        //         });
-        // });
+            // Réinitialise le formulaire
+            document.getElementById('contactForm').reset();
+        }
 
 
         // Smooth scroll behavior
