--- a/calculatrice/index.html
+++ b/calculatrice/index.html
@@ -17,6 +17,10 @@
             margin: 0;
         }
 
+        h1 {
+            color: #1e88e5;
+        }
+
         .calc {
             background: white;
             padding: 20px;
@@ -70,6 +74,7 @@
 </head>
 
 <body>
+    <h1>Calculatrice</h1>
     <div class="calc">
         <input type="text" id="display" disabled>
         <div class="buttons">
