--- a/calculatrice/index.html
+++ b/calculatrice/index.html
@@ -97,7 +97,7 @@
             <button onclick="clearDisplay()" style="grid-column: span 4; background:#e53935;">C</button>
         </div>
     </div>
-    <a href="../index.html" class="back">← Retour au portfolio</a>
+    <a href="../index.html#calculatrice-section" class="back">← Retour au portfolio</a>
 
     <script>
         const display = document.getElementById("display");
