--- a/todolist/index.html
+++ b/todolist/index.html
@@ -92,7 +92,7 @@
         <input id="taskInput" type="text" placeholder="Nouvelle tâche...">
         <button onclick="addTask()">Ajouter</button>
         <ul id="taskList"></ul>
-        <a href="../index.html" class="back">← Retour au portfolio</a>
+        <a href="../index.html#todolist-section" class="back">← Retour au portfolio</a>
     </div>
 
     <script>
