--- a/shifumi/index.html
+++ b/shifumi/index.html
@@ -66,7 +66,7 @@
 
     <div class="result" id="result"></div>
 
-    <a href="../index.html" class="back">← Retour au portfolio</a>
+    <a href="../index.html#shifumi-section" class="back">← Retour au portfolio</a>
 
     <script>
         function play(playerChoice) {
