--- a/typerush/index.html
+++ b/typerush/index.html
@@ -105,7 +105,7 @@
 
     <div id="result"></div>
     <div>
-        <a class="back" href="../index.html">← Retour au portfolio</a>
+        <a class="back" href="../index.html#typerush-section">← Retour au portfolio</a>
     </div>
 
     <script>
