--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             <div class="hero-content">
                 <h1>Bonjour, je suis Kevin,<br><span class="blue-text">Développeur Web</span></h1>
                 <p>
-                    Je m’appelle Kevin Urbain et je suis actuellement étudiant à E6K de Charleroi en tant que
+                    Je m'appelle Kevin Urbain et je suis actuellement étudiant à E6K de Charleroi en tant que
                     développeur web.
                 </p>
                 <p>
-                    Ce site, que j’ai entièrement conçu et développé moi-même en HTML, CSS et JavaScript, reflète ma
+                    Ce site, que j'ai entièrement conçu et développé moi-même en HTML, CSS et JavaScript, reflète ma
                     passion pour le développement web et applicatif.
                 </p>
                 <p>
-                    Curieux, motivé et rigoureux, j’aime relever des
+                    Curieux, motivé et rigoureux, j'aime relever des
                     défis techniques et transformer mes idées en projets concrets, fonctionnels et esthétiques.
                 </p>
                 <p>
@@ -70,7 +70,7 @@
                         <span class="category">Javascript</span>
                     </div>
                     <p>
-                        TypeRush vous permet de tester et d’améliorer votre vitesse de frappe au clavier de manière
+                        TypeRush vous permet de tester et d'améliorer votre vitesse de frappe au clavier de manière
                         ludique et interactive. Vous pouvez suivre vos performances, relever des défis chronométrés
                         et
                         voir vos progrès au fil du temps.
@@ -92,7 +92,7 @@
                     </div>
                     <p>Cette application simple et intuitive permet de créer, organiser et suivre vos tâches
                         quotidiennes. Grâce à une interface épurée, vous pouvez ajouter, supprimer ou cocher vos tâches
-                        en un clic. L’objectif est d’offrir un outil pratique pour améliorer la productivité et garder
+                        en un clic. L'objectif est d'offrir un outil pratique pour améliorer la productivité et garder
                         une vision claire de vos priorités.</p>
                 </div>
             </div>
@@ -109,10 +109,10 @@
                         <span class="category">Mathématiques</span>
                     </div>
                     <p>
-                        Cette application permet d’effectuer rapidement et facilement toutes vos opérations
+                        Cette application permet d'effectuer rapidement et facilement toutes vos opérations
                         mathématiques
                         de base. Grâce à une interface claire et intuitive, vous pouvez additionner, soustraire,
-                        multiplier, diviser et effectuer d’autres calculs en toute simplicité. Un outil pratique pour
+                        multiplier, diviser et effectuer d'autres calculs en toute simplicité. Un outil pratique pour
                         vos besoins quotidiens ou pour vos études.
                     </p>
                 </div>
@@ -128,10 +128,10 @@
                         <span class="category">Jeux</span>
                     </div>
                     <p>
-                        Cette application permet d’effectuer rapidement et facilement toutes vos opérations
+                        Cette application permet d'effectuer rapidement et facilement toutes vos opérations
                         mathématiques
                         de base. Grâce à une interface claire et intuitive, vous pouvez additionner, soustraire,
-                        multiplier, diviser et effectuer d’autres calculs en toute simplicité. Un outil pratique pour
+                        multiplier, diviser et effectuer d'autres calculs en toute simplicité. Un outil pratique pour
                         vos besoins quotidiens ou pour vos études.
                     </p>
                 </div>
@@ -156,8 +156,8 @@
                         <h3>Début des études supérieures</h3>
                         <h4>Chimie - UMons</h4>
                         <p>
-                            Je commence un bachelier en sciences chimiques à l’Université de Mons. Après deux années, je
-                            réalise progressivement que la chimie ne m’anime plus autant et je commence à m’interroger
+                            Je commence un bachelier en sciences chimiques à l'Université de Mons. Après deux années, je
+                            réalise progressivement que la chimie ne m'anime plus autant et je commence à m'interroger
                             sur mon avenir professionnel.
                         </p>
                     </div>
@@ -168,10 +168,10 @@
                     <div class="timeline-content">
                         <span class="timeline-date">2018 - 2020</span>
                         <h3>Premières responsabilités et réorientation</h3>
-                        <h4>Achat d’une maison – Formation et emploi</h4>
+                        <h4>Achat d'une maison - Formation et emploi</h4>
                         <p>
-                            Je deviens propriétaire d’une maison et, pour répondre à mes obligations financières, je
-                            cherche à entrer rapidement dans la vie active. J’intègre alors le CPAS de Frameries tout en
+                            Je deviens propriétaire d'une maison et, pour répondre à mes obligations financières, je
+                            cherche à entrer rapidement dans la vie active. J'intègre alors le CPAS de Frameries tout en
                             suivant un bachelier en éducation spécialisée.
                         </p>
                     </div>
@@ -182,14 +182,14 @@
                     <div class="timeline-content">
                         <span class="timeline-date">2021 - 2025</span>
                         <h3>Prise de recul et quête de sens</h3>
-                        <h4>Expérience d’éducateur – Réflexion personnelle</h4>
+                        <h4>Expérience d'éducateur - Réflexion personnelle</h4>
                         <p>
-                            Éducateur à temps plein auprès d’enfants, je ressens un malaise croissant : le domaine
+                            Éducateur à temps plein auprès d'enfants, je ressens un malaise croissant : le domaine
                             social ne correspond pas à une véritable vocation pour moi, mais davantage à un métier
-                            alimentaire. Les journées me paraissent longues et je n’envisage pas d’y faire carrière.
+                            alimentaire. Les journées me paraissent longues et je n'envisage pas d'y faire carrière.
                             Peu à peu, je fais le point sur mon parcours. Passionné depuis toujours par les jeux vidéo,
                             les sciences et les technologies, je ressens le besoin de me tourner vers le numérique. Un
-                            souvenir refait surface : à l’adolescence, j’avais créé un petit site en HTML pour organiser
+                            souvenir refait surface : à l'adolescence, j'avais créé un petit site en HTML pour organiser
                             des tournois sur Call of Duty. Pourquoi ne pas renouer avec cette passion ?</p>
                     </div>
                 </div>
@@ -205,9 +205,9 @@
                             petits sites statiques et des animations. Je prends plaisir à apprendre et je redécouvre une
                             véritable motivation.
                             Je poursuis avec Dyma.fr pour aborder JavaScript et C#. Bien que plus complexes, ces
-                            langages renforcent mon intérêt : j’apprécie le défi intellectuel qu’ils représentent. Je
-                            m’exerce sur Frontend Mentor, développe un portfolio et réalise un site vitrine pour
-                            l’activité d’avocate de mon épouse.
+                            langages renforcent mon intérêt : j'apprécie le défi intellectuel qu'ils représentent. Je
+                            m'exerce sur Frontend Mentor, développe un portfolio et débute un site vitrine pour
+                            l'activité d'avocate de mon épouse.
                         </p>
                     </div>
                 </div>
@@ -219,8 +219,8 @@
                         <h3>Préparation de la reconversion</h3>
                         <h4>Organisation et recherche de formation</h4>
                         <p>
-                            Je prends la décision d’aménager mon temps de travail en passant à mi-temps afin de me
-                            consacrer pleinement à ma reconversion. Après plusieurs recherches, je découvre l’E6K de
+                            Je prends la décision d'aménager mon temps de travail en passant à mi-temps afin de me
+                            consacrer pleinement à ma reconversion. Après plusieurs recherches, je découvre l'E6K de
                             Charleroi, qui propose des certifications de développeur web.</p>
                     </div>
                 </div>
@@ -230,11 +230,11 @@
                     <div class="timeline-content">
                         <span class="timeline-date">2025</span>
                         <h3>Etudiant en développement web</h3>
-                        <h4>Formation en full stack – Option back-end</h4>
+                        <h4>Formation en full stack - Option back-end</h4>
                         <p>
                             Depuis septembre 2025, je suis inscrit en développement web. La première année est consacrée
                             au tronc commun en full stack, avant une spécialisation prévue en deuxième année. Je
-                            m’oriente déjà vers le back-end, domaine qui correspond à mon profil et à mes intérêts.</p>
+                            m'oriente déjà vers le back-end, domaine qui correspond à mon profil et à mes intérêts.</p>
                     </div>
                 </div>
 
@@ -245,8 +245,8 @@
                         <h3>Projets personnels et recherche de stage</h3>
                         <h4>Mise en pratique et professionnalisation</h4>
                         <p>
-                            Je travaille sur des projets personnels afin d’approfondir mes compétences et valoriser mon
-                            profil. Je suis actuellement à la recherche d’un stage conventionné (minimum 125 heures, non
+                            Je travaille sur des projets personnels afin d'approfondir mes compétences et valoriser mon
+                            profil. Je suis actuellement à la recherche d'un stage conventionné (minimum 125 heures, non
                             rémunéré) pour mettre en pratique mes apprentissages. Mon portfolio reflète ma progression,
                             ma détermination et mon projet de reconversion.
                             <br>
@@ -275,8 +275,6 @@
                     </div> -->
 
                     <form id="contactForm" action="https://submit-form.com/Vje1NX3nr">
-                        <input type="hidden" name="_redirect"
-                            value="https://kevinurbain.github.io/portfolio/thanks.html" />
                         <div class="form-group">
                             <label for="name">Nom complet *</label>
                             <input type="text" id="name" name="name" required>
