--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             ma détermination et mon projet de reconversion.
                             <br>
                             <br>
-                            Mon objectif : devenir développêur full stack.
+                            Mon objectif : devenir développeur full stack.
                         </p>
                     </div>
                 </div>
